--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             <div class="container">
                 <div class="ba-info-block ba-info-block_height">
                     <h2 class="ba-info__title"><span>what we do</span></h2>
-                    <div class="ba-work-list">
-                        <div class="ba-work__item">
+                    <div class="ba-row ba-work-list">
+                        <div class="ba-col-12 ba-work__item">
                             <div class="ba-work__icon">
                                 <img src="images/design.png" alt="design logo">
                             </div>
@@ -93,7 +93,7 @@
                             </div>
                         </div>
 
-                        <div class="ba-work__item">
+                        <div class="ba-col-12 ba-work__item">
                             <div class="ba-work__icon">
                                 <img src="images/development.png" alt="development logo">
                             </div>
@@ -105,7 +105,7 @@
                             </div>
                         </div>
 
-                        <div class="ba-work__item">
+                        <div class="ba-col-12 ba-work__item">
                             <div class="ba-work__icon">
                                 <img src="images/management.png" alt="product management">
                             </div>
@@ -173,23 +173,6 @@
           
         </section>
         <!-- ======= BA-LINKS END =======-->
-
-        <!-- ======= BA-CONTACT-US START =======-->
-        <!--<section class="ba-section ba-contact">
-            <div class="container">
-                <div class="ba-info-block">
-                    <h2 class="ba-info__title">contact us</h2>
-                    <div class="ba-info__text">
-                        <p>Planning and development is iterative. Because we are constantly coding and testing, 
-                        the products we build are always ready to go live. This iterative process allows for 
-                        changes as business requirements evolve. </p>
-                    </div>
-                    <button class="ba-btn-contact" aria-label="contact us">contact us</button>
-                </div>
-            </div>
-        </section>-->
-        <!-- ======= BA-CONTACT-US END =======-->
-
 
     </main>
 
