--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <!-- ======= BA-WHAT-WE-DO START =======-->
         <section class="ba-section ba-work">
             <div class="container">
-                <div class="ba-info-block ba-info-block_height">
+                <div class="ba-info-block">
                     <h2 class="ba-info__title"><span>what we do</span></h2>
                     <div class="ba-row ba-work-list">
                         <div class="ba-col-12 ba-work__item">
